--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -9,6 +9,7 @@
       background-color: #efefef;
       border-radius: 8px;
       margin: 10px;
+      text-transform: capitalize;
     }
   }
   .pokemonListItem {
@@ -33,9 +34,11 @@
         margin-bottom: 10px;
         span {
           margin-right: 15px;
-          padding: 10px;
+          padding: 5px 10px;
           border-radius: 5px;
-          background-color: #efefef; //add default color
+          background-color: #efefef;
+          text-transform: capitalize;
+          display: inline-block;
         }
       }
       > span {
