Handle type click with api

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -50,6 +50,16 @@
     }
   }
 
+  .pokemonTypeList {
+    p {
+      margin: 0;
+      padding: 15px;
+      text-transform: capitalize;
+      text-align: center;
+      width: 100%;
+    }
+  }
+
   span, button {
     &.bug {background-color: #729f3f !important};
     &.dragon { background-color: #53a4cf !important};
